@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 0.5.6 ===
+* Updated sort interface functions for darray and parray.
 
 === 0.5.5 ===
 * Better support of <stdlib.h> qsort_r() calls for different platforms.
